--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.1.3",
     "canvas-confetti": "^1.5.1",
     "rxjs": "~7.5.0",
+    "simple-keyboard": "^3.4.71",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
