--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "~13.3.0",
     "@ng-bootstrap/ng-bootstrap": "^12.0.1",
     "@popperjs/core": "^2.10.2",
+    "algoliasearch": "^4.13.0",
+    "angular-instantsearch": "^4.1.0",
     "bootstrap": "^5.1.3",
     "canvas-confetti": "^1.5.1",
     "rxjs": "~7.5.0",
