--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
     "canvas-confetti": "^1.5.1",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
     "rxjs": "~7.5.0",
     "seedrandom": "^3.0.5",
     "tslib": "^2.3.0",
@@ -51,5 +53,10 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.6.2"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
