--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.1.3",
     "canvas-confetti": "^1.5.1",
     "fs": "^0.0.1-security",
+    "moment-timezone": "^0.5.45",
     "path": "^0.12.7",
     "rxjs": "~7.5.0",
     "seedrandom": "^3.0.5",
