--- a/angular.json
+++ b/angular.json
@@ -44,6 +44,7 @@
                   "maximumError": "4kb"
                 }
               ],
+              "statsJson": true,
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
